# clichain

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench.py  bench_from_file.py
examples/: 01_basic_pipe.py  02_capture_interpolate.py  03_filter.py  04_file_io.py  05_each.py  06_disk_image.py  07_video_convert.py  08_checks.py  09_meter.py  10_report_sbom.py  11_compilable.py  12_webhook_metrics.py
src/clichain/: __init__.py  checks.py  cli.py  core.py
src/cmdchain/: __init__.py
tests/: test_compile.py  test_core.py
